# trade-sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  github_publish.md  safety.md  trading_workflow.md  universe_selection.md  usage.md
examples/: watchlist.yaml
src/trade_sentinel/: __init__.py  agent.py  broker.py  cli.py  config.py  dashboard.py  data.py  indicators.py  models.py  report.py  risk.py  strategy.py  trading.py
tests/: test_dashboard.py  test_strategy.py  test_trading.py
