[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-sentinel"
version = "0.1.0"
description = "An AI-assisted stock research and paper-trading agent with risk controls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nikhil Uppari" }]
dependencies = []

[project.optional-dependencies]
market = ["yfinance>=0.2.40", "pandas>=2.2", "numpy>=1.26"]
ai = ["openai>=1.40"]
ui = ["rich>=13.7"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
trade-sentinel = "trade_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
